# SIUnits

./: Angle.h  AngularSpeed.cpp  BaseValue.cpp  BaseValue.h  CMakeCache.txt  CMakeLists.txt  CppTestApp.cpp  Force.cpp  Frequency.cpp  Frequency.h  Length.cpp  Length.h  Luminous.h  Makefile  Mass.h  Power.cpp  Pressure.cpp  Pressure.h  README.md  SITest  Setup.sh  Speed.cpp  Speed.h  Temp.cpp  TemplateUtils.cpp  TemplateUtils.h  UnitProp.h  UnitPropLTF.h  Volume.cpp  Volume.h  cmake_install.cmake
LICENSE/: cat.jpg.license
app/: CMakeLists.txt  CppTestApp.cpp  Makefile  SIUnitsTest.cpp  cmake_install.cmake
src/: Acceleration.cpp  Acceleration.h  Angle.cpp  Angle.h  AngularSpeed.cpp  AngularSpeed.h  Area.cpp  Area.h  BaseScaleOffset.cpp  BaseScaleOffset.h  BaseValue.h  BaseValuef.h  CMakeLists.txt  CppTestApp.cpp  Force.cpp  Force.h  Frequency.cpp  Frequency.h  Length.cpp  Length.h  Luminous.cpp  Luminous.h  Makefile  Mass.cpp  Mass.h  Moment.cpp  Moment.h  MyBase.cpp  MyBase.h  Power.cpp  Power.h  Pressure.cpp  Pressure.h  Speed.cpp  Speed.h  Temp.h  Temperature.cpp  Temperature.h  UnitProp.h  UnitPropLTF.h  (+5 more)
